# kanonymity-for-IFS4205-testing

./: .gitignore  anonymize.py  create_researchdata_view.sql  generate_anon_data.py  pyproject.toml  researchdata_view.sql  researchdb.sql
test_data/: malform_insert.csv
